--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <script type="text/javascript" src="js/GamePause/controller/GamePauseScene.js"></script>
     <script type="text/javascript" src="js/GameComplete/model/GameCompleteSizer.js"></script>
     <script type="text/javascript" src="js/GameComplete/controller/GameCompleteScene.js"></script>
+    <script type="text/javascript" src="js/HowToPlay/model/HowToPlaySizer.js"></script>
+    <script type="text/javascript" src="js/HowToPlay/controller/HowToPlayScene.js"></script>
     <script type="text/javascript" src="js/Utilities/Scaler.js"></script>
     <script type="text/javascript" src="js/game.js"></script>
 </head>
