--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <script type="text/javascript" src="js/GameComplete/controller/GameCompleteScene.js"></script>
     <script type="text/javascript" src="js/HowToPlay/model/HowToPlaySizer.js"></script>
     <script type="text/javascript" src="js/HowToPlay/controller/HowToPlayScene.js"></script>
+    <script type="text/javascript" src="js/Settings/model/SettingsSceneSizer.js"></script>
+    <script type="text/javascript" src="js/Settings/controller/SettingsScene.js"></script>
     <script type="text/javascript" src="js/Utilities/Scaler.js"></script>
     <script type="text/javascript" src="js/game.js"></script>
 </head>
